[package]
name = "liquidity-deployment-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
valence-library-utils = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-library-utils" }
valence-processor-utils = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-processor-utils" }
valence-astroport-lper = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-lper" }
valence-astroport-withdrawer = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-withdrawer" }
valence-astroport-utils = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-utils" }
valence-splitter-library= { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-splitter-library" }
valence-authorization-utils = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-authorization-utils" }
valence-account-utils = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-account-utils" }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cosmwasm-std    = { version = "2.1.3" }
anyhow = "1.0"
dotenv = "0.15" 
chrono = { version = "0.4", features = ["serde"] }
cw-ownable      = "2.0.0"
sha2 = "0.10"
cw-utils = "1.0"
bech32             = "0.11.0"
hex = "0.4"